Closed Bug 906626 Opened 11 years ago Closed 11 years ago

Tracelogger: Fix builds after include changes

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: h4writer, Assigned: h4writer)

References

Details

Attachments

(1 file)

Since bug 902917 tracelogger builds won't build anymore. Fix it!
Blocks: 902917
Assignee: general → hv1989
Attachment #792109 - Flags: review?(n.nethercote)
Comment on attachment 792109 [details] [diff] [review]
Fix includes + some unrelated style nits (max line length)

Review of attachment 792109 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/TraceLogging.h
@@ +13,5 @@
>  class JSScript;
>  
> +// public forward declarations
> +namespace JS {
> +    class CompileOptions;

No need to indent within namespaces.
Attachment #792109 - Flags: review?(n.nethercote) → review+
https://hg.mozilla.org/mozilla-central/rev/647a56cd58ac
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: