Bug 906626: Tracelogger: Fix the includes and address style nits, r=njn