js/src/TraceLogging.h
@@ -12,9 +12,11 @@
 
 class JSScript;
 
-namespace js {
+namespace JS {
+class CompileOptions;
+}
 
-struct CompileOptions;
+namespace js {
 
 class TraceLogging
 {
@@ -72,7 +74,7 @@ class TraceLogging
     ~TraceLogging();
 
     void log(Type type, const char* filename, unsigned int line);
-    void log(Type type, const CompileOptions &options);
+    void log(Type type, const JS::CompileOptions &options);
     void log(Type type, JSScript* script);
     void log(const char* log);
     void log(Type type);
@@ -96,14 +98,16 @@ class AutoTraceLog {
     TraceLogging::Type stop;
 
   public:
-    AutoTraceLog(TraceLogging* logger, TraceLogging::Type start, TraceLogging::Type stop, const CompileOptions &options)
+    AutoTraceLog(TraceLogging* logger, TraceLogging::Type start, TraceLogging::Type stop,
+                 const JS::CompileOptions &options)
       : logger(logger),
         stop(stop)
     {
         logger->log(start, options);
     }
 
-    AutoTraceLog(TraceLogging* logger, TraceLogging::Type start, TraceLogging::Type stop, JSScript* script)
+    AutoTraceLog(TraceLogging* logger, TraceLogging::Type start, TraceLogging::Type stop,
+                 JSScript* script)
       : logger(logger),
         stop(stop)
     {
